[project]
name = "messiah"
version = "0.1.0"
description = "MESSIAH - Autonomous Derivatives AI (KOSPI200 mini futures + options)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "redis>=5.0",
    "polars>=1.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
ml = ["lightgbm>=4.3", "scikit-learn>=1.4", "numpy>=1.26"]
ui = ["fastapi>=0.111", "uvicorn>=0.30", "websockets>=12.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "pyright>=1.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/messiah"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# SYSTEM.md R3: naive datetime 금지 — datetime.now()/utcnow() 직접 호출을 lint로 차단
select = ["E", "F", "I", "DTZ"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "standard"
